<resources>
    <string name="settings">Settings</string>
    <string name="label_general">General</string>
    <string name="label_other">Others</string>
    <string name="menu_drone_setup">Drone Setup</string>
    <string name="app_settings">App Settings</string>
    <string name="flight_data">Flight Data</string>
    <string name="editor">Editor</string>
    <string name="kinect">Kinect</string>
    <string name="upload_mission">Upload mission</string>
    <string name="download_mission">Download mission</string>
    <string name="screen_cal">Calibration</string>
    <string name="screen_checklist">Checklist</string>
    <string name="screen_parameters">Parameters</string>
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_maps_title">Maps</string>
    <string name="pref_maps_providers_summary">Which map provider to use.</string>
    <string name="pref_maps_providers_title">Maps Providers</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_ui_language_english">English as UI Language</string>
    <string name="pref_ui_language_english_summary">Use English language (instead of system language). Requires app restart.</string>
    <string name="pref_keep_screen_bright">Keep Screen On</string>
    <string name="pref_keep_screen_bright_summary">Check to keep the screen on and bright (affect
        battery life)</string>
    <string name="pref_lock_screen_orientation">Lock Screen Orientation</string>
    <string name="pref_lock_screen_orientation_summary">Locks screen to the orientation which is present when connecting</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_map_type_summary">Which type of map to use</string>
    <string name="pref_tile_provider_title">Map Tile Provider</string>
    <string name="pref_tile_provider_google">GoogleAmerica</string>
    <string name="pref_tile_provider_mapbox">GoogleChina</string>
    <string name="pref_tile_provider_summary">Which map tile provider to use</string>
    <string name="pref_enable_tts">Enable Speech output</string>
    <string name="pref_enable_tts_summary">Audible messages for important events</string>
    <string name="pref_request_max_volume">Set Volume To Max On Start</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_connection_subtitle">USB, TCP and UDP settings</string>
    <string name="pref_usb">USB Connection</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>
    <string name="pref_server">TCP connection</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_udp">UDP connection</string>
    <string name="pref_udp_server_port">UDP Server Port</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="user_autopan_long_press">Long press to activate user auto panning.</string>
    <string name="drone_autopan_long_press">Long press to activate drone auto panning.</string>
    <string name="drone_no_location">No drone location available</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="button_setup_calibrate">Calibrate</string>
    <string name="button_setup_cancel">Cancel</string>
    <string name="button_setup_send">Send</string>
    <string name="button_setup_next">Next</string>
    <string name="button_setup_done">Done</string>
    <string name="select_file_to_open">Select file to open:</string>
    <string name="no_files">No files</string>
    <string name="error_when_opening_file">Error when opening file</string>
    <string name="status_file_opened">File opened</string>
    <string name="distance_between_lines">Lateral</string>
    <string name="footprint">Footprint</string>
    <string name="ground_resolution">GSD</string>
    <string name="distance_between_pictures">Longitudinal</string>
    <string name="area">Area</string>
    <string name="camera_">Camera:</string>
    <string name="hatch_angle">Hatch angle:</string>
    <string name="flight_altitude">Flight Altitude:</string>
    <string name="overlap">Overlap:</string>
    <string name="sidelap">Sidelap:</string>
    <string name="mission_length">Grid Length</string>
    <string name="pictures">Pictures</string>
    <string name="number_of_strips">Number of Strips</string>
    <string name="draw_the_survey_region">Draw the survey region</string>
    <string name="mode_acro">Acro allows a pilot to control rate of rotation directly.</string>
    <string name="mode_althold">Alt Hold automatically controls throttle and maintains altitude. Does not require GPS.</string>
    <string name="mode_auto">Auto follows the scripted mission stored on the vehicle.</string>
    <string name="mode_circle">Circle rotates the vehicle around a point of interest. The vehicle will always point toward the center. Requires GPS lock.</string>
    <string name="mode_drift">Drift combines roll and yaw to produce a more natural and intuitive flight. Requires GPS lock.</string>
    <string name="mode_guided">Guided enables position control from a ground station. Requires GPS lock.</string>
    <string name="mode_land">Land at the current location. Requires GPS lock.</string>
    <string name="mode_loiter">Loiter allows the pilot to fly completely through GPS.</string>
    <string name="mode_rtl">RTL rises to the minimum altitude, returns to the home location and lands. Requires GPS lock.</string>
    <string name="mode_sport">Sport allows a pilot to control rate of rotation directly with the addition of self-leveling.</string>
    <string name="mode_stabilize">Stabilize levels the vehicle in flight.</string>
    <string name="mode_poshold">PosHold allows position hold (GPS) with direct response to pilot input.</string>
    <string name="mode_follow">The vehicle follows the user based on the device GPS location.</string>
    <string name="waypointType_Waypoint">Waypoint</string>
    <string name="waypointType_SplineWaypoint">Spline Waypoint</string>
    <string name="waypointType_TakeOff">Takeoff</string>
    <string name="waypointType_RTL">Return To Launch</string>
    <string name="waypointType_Land">Land</string>
    <string name="waypointType_Change_Speed">Change Speed</string>
    <string name="waypointType_Condition_Yaw">Set Yaw</string>
    <string name="waypointType_Camera_Trigger">Camera Trigger</string>
    <string name="waypointType_Set_Servo">Set Servo</string>
    <string name="waypointType_EPM">EPM</string>
    <string name="waypointType_Circle">Circle</string>
    <string name="waypointType_Loiter">Loiter</string>
    <string name="waypointType_ROI">Region of Interest</string>
    <string name="waypointType_ResetROI">Reset ROI</string>
    <string name="waypointType_Survey">Survey</string>
    <string name="waypointType_Spline_Survey">Spline Survey</string>
    <string name="waypointType_BuildingMapper">Structure Scan</string>
    <string name="waypointInfo_Land">Land vehicle at the current location. You must manually exit Auto mode to disarm motors.</string>
    <string name="waypointInfo_LoiterN">Orbit the current location for the desired number of turns.</string>
    <string name="waypointInfo_LoiterT">Hold the current location for the desired number of seconds or indefinitely to end the mission.</string>
    <string name="waypointInfo_RTL">Send the vehicle to the home location set when armed. An altitude of 0 will return to home at the RTL altitude parameter.</string>
    <string name="waypointInfo_TakeOff">Lift off from the ground to the specified altitude before proceeding to the next waypoint.</string>
    <string name="waypointInfo_Waypoint">Travel to a position in 3D space. Optional delay (in seconds) to hold position.</string>
    <string name="waypointInfo_CondYaw">Set condition to reach a certain target angle.</string>
    <string name="waypointInfo_SetSpeed">Change vehicle speed until the end of this mission.</string>
    <string name="waypointInfo_CameraTrigger">Trigger the camera shutter at regular distance intervals.</string>
    <string name="waypointInfo_SetServo">Move a servo to a particular PWM value.</string>
    <string name="waypointInfo_EpmGrabber">Release the payload of the EPM grabber</string>
    <string name="waypointInfo_ROI">Sets a location and altitude to point copter towards and to aim an optional camera.</string>
    <string name="waypointType_Do_Jump">Do Jump</string>
    <string name="waypointInfo_DoJump">Jump to a specific waypoint.</string>
    <string name="pwm">PWM</string>
    <string name="repeat_count">Repeat Count</string>
    <string name="editor_err_land_rtl_added">One cannot add new waypoints after LAND or RTL</string>
    <string name="editor_info_window">Distance: 0m, Flight time: 0:00</string>
    <string name="editor_info_window_distance">Distance: %s</string>
    <string name="editor_info_window_flight_time">Flight Time: %1$02d:%2$02d</string>
    <string name="editor_info_window_heading">Heading: %.0f°</string>
    <string name="distance_to_home">Distance to home</string>
    <string name="loiter_time">Loiter Time</string>
    <string name="waypoint_delay">Delay before next waypoint</string>
    <string name="circle_radius">Circle Radius</string>
    <string name="waypoint_longitude">Longitude: %f°</string>
    <string name="waypoint_latitude">Latitude: %f°</string>
    <string name="circle_turns">Number of turns</string>
    <string name="structure_scan_description">Map a building</string>
    <string name="structure_scan_start_alt">Start altitude</string>
    <string name="metadata_value">Value:</string>
    <string name="metadata_values">Values:</string>
    <string name="metadata_units">Units:</string>
    <string name="metadata_range">Range:</string>
    <string name="altitude_label">Altitude</string>
    <string name="roi_height_label">ROI Height</string>
    <string name="mission_control_arm">Arm</string>
    <string name="mission_control_disarm">Disarm</string>
    <string name="mission_control_takeoff">Takeoff</string>
    <string name="mission_control_auto">Auto</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="pref_title_google_maps">Google Maps Preferences</string>
    <string name="pref_title_google_tile_provider">Google Tile Provider</string>
    <string name="radius_label">Radius</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="pref_title_mapbox_tile_provider" translatable="false">GoogleChina Tile Provider</string>
    <string name="pref_title_mapbox_map_download">Download Offline Map</string>
    <string name="pref_summary_mapbox_map_download">Click to cache map for use while offline</string>
    <string name="label_solo_video_stream">Solo video stream</string>
    <string name="label_custom_video_stream">Custom video stream</string>
    <string name="hint_custom_video_stream_udp_port" translatable="false">0000</string>
    <string name="label_udp_port">UDP Port:</string>
    <string name="user_date">Date</string>
    <string name="user_location">Location</string>
    <string name="user_distance">Distance</string>
    <string name="user_time">Time</string>
    <string name="user_max_height">MaxHeight</string>
    <string name="name">Name</string>
    <string name="find_password">Find Password</string>
    <string name="password_again">Password again</string>
</resources>