<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_google_maps"/>

    <ListPreference
        android:defaultValue="谷歌中国"
        android:key="pref_google_map_tile_providers"
        android:summary="@string/pref_tile_provider_summary"
        android:title="@string/pref_tile_provider_title"
        android:entries="@array/TileProviders"
        android:entryValues="@array/TileProviderValues"/>

    <PreferenceCategory
        android:title="@string/pref_title_google_tile_provider"
        android:key="pref_google_tile_provider_settings">
        <ListPreference
            android:defaultValue="satellite"
            android:entries="@array/MapTypes"
            android:entryValues="@array/MapTypeValues"
            android:key="pref_map_type"
            android:summary="@string/pref_map_type_summary"
            android:title="@string/pref_map_type"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_mapbox_tile_provider"
        android:key="pref_mapbox_tile_provider_settings">

        <Preference
            android:key="pref_mapbox_map_download"
            android:title="@string/pref_title_mapbox_map_download"
            android:summary="@string/pref_summary_mapbox_map_download"/>

        <Preference
            android:key="pref_mapbox_map_deleteDataBase"
            android:title="删除离线地图数据库"
       />

    </PreferenceCategory>

</PreferenceScreen>