<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/fragment_generic_mission_control" />


    <org.farring.gcs.view.spinnerWheel.CardWheelHorizontalView
        android:id="@+id/takeoffAltPicker"
        style="@style/missionItemDetailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="起飞高度：米" />

        <LinearLayout
            android:id="@+id/mc_armed_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            >
            <Button
                android:id="@+id/mc_armBtn"
                style="@style/flightControlButton.Row"
                android:textSize="12dp"
                android:text="@string/mission_control_arm" />
            <Button
                android:id="@+id/mc_disarmBtn"
                style="@style/flightControlButton.Row"
                android:textSize="12dp"
                android:text="@string/mission_control_disarm" />

            <Button
                android:id="@+id/mc_takeoff"
                style="@style/flightControlButton.Row"
                android:textSize="12dp"
                android:text="@string/mission_control_takeoff" />

            <Button
                android:id="@+id/mc_TakeoffInAutoBtn"
                style="@style/flightControlButton.Row"
                android:textSize="12dp"
                android:text="@string/mission_control_auto" />

        </LinearLayout>


</FrameLayout>