<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_widget_pref"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/solo_video_stream_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="48dp"
        android:text="@string/label_solo_video_stream" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <RadioButton
        android:id="@+id/custom_video_stream_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="48dp"
        android:text="@string/label_custom_video_stream" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/label_udp_port"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/custom_video_provider_udp_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:hint="@string/hint_custom_video_stream_udp_port"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:minHeight="48dp" />

    </LinearLayout>

</RadioGroup>