<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:padding="7dp">

        <me.grantland.widget.AutofitTextView
            android:id="@+id/date_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_date"
            android:textColor="#6495ed" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/distance_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_distance"
            android:textColor="#ffffff" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/height_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_max_height"
            android:textColor="#ffffff" />

        <me.grantland.widget.AutofitTextView
            android:id="@+id/time_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_time"
            android:textColor="#ffffff" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/user_location"
            android:textColor="#ffffff" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.tubb.smrv.SwipeMenuRecyclerView
            android:id="@+id/user_historyLog_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>