<?xml version="1.0" encoding="utf-8"?>
<org.farring.gcs.view.CustomerScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingTop="15dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="15dp" />

        <LinearLayout
            android:id="@+id/signup_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:inputType="textPassword"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingTop="15dp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/signup_button_bg"
                android:minHeight="56dp"
                android:minWidth="250dp"
                android:text="@string/label_sign_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/switch_to_login"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/label_login"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_bg"
                android:minHeight="56dp"
                android:minWidth="250dp"
                android:text="@string/label_login"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/switch_to_signup"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/label_sign_up"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/find_password_tv"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/find_password"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</org.farring.gcs.view.CustomerScrollView>