<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/opaque_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_title_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayNameView"
            style="@style/paramInfoText.displayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/nameView"
            style="@style/paramInfoText.name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/descView"
        style="@style/paramInfoText.desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mode_desc_rectangle" />

    <LinearLayout
        android:id="@+id/unitsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mode_desc_rectangle"
        android:orientation="horizontal">

        <TextView
            style="@style/paramInfoText.label"
            android:text="@string/metadata_units" />

        <TextView
            android:id="@+id/unitsView"
            style="@style/paramInfoText.content.units" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rangeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/paramInfoText.label"
            android:text="@string/metadata_range" />

        <TextView
            android:id="@+id/rangeView"
            style="@style/paramInfoText.content.values" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/valuesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/valueTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/paramInfoText.label"
                android:text="@string/metadata_values" />

            <TextView
                android:id="@+id/valuesView"
                style="@style/paramInfoText.content.values" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/valueSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="56dp"
            android:orientation="horizontal">

            <TextView
                style="@style/paramInfoText.label"
                android:text="@string/metadata_value" />

            <Spinner
                android:id="@+id/valueSpinner"
                style="@style/paramInfoText.content.values"
                android:layout_marginRight="12dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView style="@style/paramInfoText.label" />

    </LinearLayout>

</LinearLayout>